# BDX-R-Deploy

./: MUJOCO_LOG.TXT  README.md  main.py  pyproject.toml
Tests/: BDXWALK.py  head_puppet.py  robot_sender.py  stand.py  test_imu_deploy.py  test_robot_deploy.py  visualize_imu.py
bdx_api/: config.py  hardware.py  hybrid.py  hybrid_full.py  imu.py  interface.py  logger.py  robot_receiver.py  sim.py
data/bdxr_real/: chirp_data.pt
logs/: latest_run.csv  newest_run.csv
models/: T1_test.onnx  best.onnx  delay.onnx  new.onnx  newlegs.onnx  policy.pt  policy.yaml  walk.onnx
scripts/: deploy.py  deploy_chirp.py  imu.py  replay_csv.py  robot_sender.py  test.py  test_robot_deploy.py  visualize_imu.py
setup/: findangles.py  setdown_can.py  setpermzeros.py  setup_can.py
sysid/: plot_results.py  system_id_deploy.py
xml/: bdxr.xml  bdxr_legs.xml
