[project]
name = "bdx-r-deploy"
version = "0.1.0"
description = "BDX-R Robot Deployment — sim and real"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "mujoco>=3.2.3",
    "numpy",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
    "pynput>=1.8.1",
]

[project.optional-dependencies]
real = [
    "python-can",
    "robstride",
    "adafruit-extended-bus",
    "adafruit-circuitpython-bno055",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bdx_api"]
